--- a/src/styles/Login.css
+++ b/src/styles/Login.css
@@ -1,28 +1,22 @@
+
+.login{
+display: flex;
+justify-content: center;
+
+}
 .form {
+  width: 50%;
   box-shadow: 0px 3px 15px rgba(0, 0, 0, 0.2);
   border-radius: 15px;
-  margin-top: 17%;
+  margin-top: 10%;
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 
-.login {
-  width: 50%;
-  border: 1px, dotted, black;
-  align-self: center;
-}
 .login h1 {
   font-family: "Nothing You Could Do", cursive;
   color: #1c374d;
-}
-
-form {
-  display: flex;
-  flex-direction: column;
-  width: 80%;
-  height: auto;
-  padding: 30px;
 }
 
 form input {
