--- a/src/styles/SingUpForm.css
+++ b/src/styles/SingUpForm.css
@@ -1,23 +1,25 @@
 .SinghUp-form {
   box-shadow: 0px 3px 15px rgba(0, 0, 0, 0.2);
-  border-radius: 3px;
+  border-radius: 5px;
+  padding: 5px;
   display: flex;
   flex-direction: column;
   width: 50%;
   align-items: center;
-  background:rgba(57, 50, 9, 0.174);
+  background:rgba(177, 169, 97, 0.66);
 }
 
 .SinghUp-form b {
   font-family: "Nothing You Could Do", cursive;
+  font-size: x-large;
+  font-size: 160%;
+
 }
 
-.SinghUp-form h1 {
-  color: #1c374d;
-}
 
 .SinghUp-form p {
   font-size:x-large;
+  font-weight: bold;
 }
 
 form {
@@ -30,15 +32,24 @@ form {
 }
 
 input{
-  background:rgba(235, 241, 235, 0.644);
+  background:rgba(235, 241, 235, 0);
+  border: none;
+  border-bottom: 1px solid #1c374d;
+  font-weight: lighter;
+  margin: 8px;
+
 }
 
 
 
 form label{
-  font-size: medium;
-  color: whitesmoke;
+  font-size:larger;
+  color: #ffffff;
+  font-weight:300;
+
 }
+
+
 input::placeholder,
 textarea::placeholder {
   font-weight: lighter;
