--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -26,6 +26,13 @@
   justify-content: center;
 }
 
+.navbar .public{
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 .navbar a {
   color: white;
   text-decoration: none;
