--- a/src/components/CardPersonalProducts/CardPersonalProducts.css
+++ b/src/components/CardPersonalProducts/CardPersonalProducts.css
@@ -1,4 +1,6 @@
 .personal-product-container{
     box-shadow: 0px 3px 15px rgba(0, 0, 0, 0.2);
-
+    width: 75%;
+    display: flex;
+    justify-tracks: center;
 }
