--- a/src/components/SingUpForm/SingUpForm.css
+++ b/src/components/SingUpForm/SingUpForm.css
@@ -1,4 +1,4 @@
-.SinghUp-form {
+.SingUp-form {
   box-shadow: 0px 3px 15px rgba(0, 0, 0, 0.2);
   border-radius: 5px;
   padding: 5px;
@@ -10,7 +10,7 @@
   color: #1c374d;
 }
 
-.SinghUp-form b {
+.SingUp-form b {
   font-family: "Nothing You Could Do", cursive;
   font-size: x-large;
   font-size: 160%;
@@ -18,7 +18,7 @@
 }
 
 
-.SinghUp-form p {
+.SingUp-form p {
   font-size:x-large;
   font-weight: bold;
 }
@@ -44,7 +44,7 @@ input{
 
 
 
-.SinghUp-form label{
+.SingUp-form label{
   font-size:larger;
   color: #1c374d;
   font-weight:300;
