--- a/src/components/CardPersonalProducts/CardPersonalProducts.css
+++ b/src/components/CardPersonalProducts/CardPersonalProducts.css
@@ -1,6 +1,43 @@
+
+
 .personal-product-container{
     box-shadow: 0px 3px 15px rgba(0, 0, 0, 0.2);
-    width: 75%;
+    width: 80%;
+    display: inline-flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    margin:25px ;
+    
+}
+
+.personal-product-container img{
+width: 250px;
+height: 250px;
+    }
+
+.Product-description{
+    width: 50%;
+    margin: 20px;
     display: flex;
-    justify-tracks: center;
+    flex-direction: column;
+    align-items: center;
+}
+
+.personal-product-container h3 {
+    font-size: 1.5rem;
+    font-family: 'Nothing You Could Do', cursive;
+    margin: 0;
+}
+
+
+.actions{
+    margin: 10px 40px 10px 40px;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.actions .button{
+    margin: 0;
 }
