--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -6,7 +6,7 @@
     flex-wrap: wrap;
     margin: 20px;
     padding: 10px;
-    background-color: #b1a961;
+    background-color: #ffffff;
     border-radius: 10px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
 }
@@ -46,4 +46,5 @@
 
 .addToCartBttn{
     align-self: center;
+    background-color: #b1a961 !important
 }
