--- a/src/views/AddProduct/AddProduct.css
+++ b/src/views/AddProduct/AddProduct.css
@@ -1,11 +1,31 @@
 .addProductForm{
-width: 80%;
-box-shadow: 0px 3px 15px rgba(0, 0, 0, 0.2);
-border-radius: 15px;
-padding-bottom: 20px;
-margin-top: 10%;
+width: 60%;
+box-shadow: 0px 3px 15px rgb(28, 55, 77);
+background-color: rgba(28, 55, 77, 0.187);
+border-radius: 10px;
 display: flex;
 flex-direction: column;
-padding: 5%;
-margin: 5%;
+padding: 2%;
+margin: 2em auto;
+}
+
+.addProductForm label {
+    font-size: 0.8rem;
+    color: #1c374d;
+
+}
+
+
+.addProductForm input{
+    font: 0.8em sans-serif;
+    margin-bottom: 4%;
+    color: #1c374d;
+}
+
+
+.addProductForm textarea{
+    width: 100%;
+    height: 200px;
+    background-color: rgba(28, 55, 77, 0);
+    
 }
