edit component created and workin

--- a/src/views/SingUp/SingUp.css
+++ b/src/views/SingUp/SingUp.css
@@ -1,9 +1,6 @@
 .SinghUp-container{
-    background-image: url("https://images.unsplash.com/photo-1586094332115-680788e0182f?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2070&q=80");
-    background-position: center;
-    background-size: cover;
-    width: 100%;
-    height: max-content;
+    
+    height: 89.9vh;
     height: 100vh;
     display: flex;
     align-items: center;
