--- a/src/views/Login/Login.css
+++ b/src/views/Login/Login.css
@@ -28,7 +28,7 @@ align-items: center;
 
 .login h1 {
   font-family: "Nothing You Could Do", cursive;
-  color: #1c374d;
+  color: #ffc107;
 }
 
 .low-div  input {
