--- a/src/views/PersonalProducts/PersonalProducts.css
+++ b/src/views/PersonalProducts/PersonalProducts.css
@@ -22,7 +22,7 @@
 }
 
 .personal-product-header button{
-    background-color: #b1a961;
+    background-color: #f9bd0b;
     color: #1c374d;
     font-weight: bolder;
     margin: 0px;
