--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -11,6 +11,7 @@
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
 }
 
+
 .description {
     width: 100%;
     height: 200px;
@@ -19,11 +20,16 @@
     overflow: hidden;
 }
 
-.product-card img {
-    width: 300px;
-    height: 300px;
-    object-fit: cover;
-    border-radius: 1rem;
+img {
+  width: 100%;
+  object-fit: fill;
+  border-radius: 1rem;
+  cursor: pointer;
+}
+
+ img:hover{
+  transition: 0.3s ease-out;
+  filter: brightness(70%); 
 }
 
 .product-content {
@@ -41,10 +47,24 @@
  .product-price {
   font-size: 2.5rem;
   font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-  color: #f60707;
+  color: #f9bd0b;
 }
 
-.addToCartBttn{
-    align-self: center;
-    background-color: #b1a961 !important
+
+.addToCartBttn {
+  align-self: center;
+   background-color: #f9bd0b;
+   border:none;
+   min-width: 100px;
+   padding-left: 10px;
+   padding-right: 10px;
+   padding-top: 5px;
+   padding-bottom: 5px;
+   border-radius: 15px;
+ }
+
+ .addToCartBttn:hover {
+  background-color: #1c374d;
+  color: white;
+  cursor: pointer;
 }
