--- a/src/views/Home/Home.css
+++ b/src/views/Home/Home.css
@@ -1,6 +1,6 @@
 .home {
   width: 100%;
-  height: 90vh;
+  height: 89vh;
   display: flex;
   justify-content: center;
   align-items: left;
@@ -11,10 +11,19 @@
   font-family: 'Noto Sans', sans-serif;
 }
 
+.home video{
+  width: 100%;
+  height: 100%;
+  object-fit:cover;
+}
+
+
 .headerContainer {
   width: auto;
   margin-left: 50px;
-  margin-bottom: 300px;
+  margin-bottom: 100px;
+  margin-top: 160px;
+  position: absolute;
 }
 
 .headerContainer h1 {
