--- a/src/views/Us/Us.css
+++ b/src/views/Us/Us.css
@@ -6,17 +6,22 @@
   align-items: center;
   flex-direction: column;
   padding-top: 10px;
+  color: #1c374d;
 }
 
 .UsContainer h1{
-    color: #1c374d;
     align-self: self-start;
 }
 
-.UsContainer p {
-    text-justify:newspaper;
-    margin-bottom: 15%;
+.UsContainer .description-text {
+    text-align: justify;
+    margin-bottom: 5%;
 }
+
+.socialMedia{
+  margin: 2%;
+}
+
 
 .socialMedia svg {
   cursor: pointer;
@@ -30,4 +35,39 @@
 
   color: #1c374d;
 
+}
+
+.contact-us-form{
+  box-shadow: 0px 3px 15px rgba(0, 0, 0, 0.2);
+  border-radius: 5px;
+  padding: 40px;
+  display: flex;
+  flex-direction: column;
+  width: 50%;
+}
+
+
+.contact-us-form .info{
+  text-align: left;
+  margin: 0%;
+}
+
+.contact-us-form .adv{
+  font-size: xx-small;
+  color: gray;
+  margin-bottom: 20px;
+}
+
+.contact-us-form h3{
+  font-family: "Nothing You Could Do", cursive;
+  font-size: 190%;
+  text-align: center;
+  margin: 0%;
+  margin-bottom:25px;
+  color: #f9bd0b;
+}
+
+.contact-us-form button{
+  align-self: center;
+  margin-bottom: 15px;
 }
