--- a/src/components/EditForm/EditForm.css
+++ b/src/components/EditForm/EditForm.css
@@ -15,6 +15,10 @@
     padding: 3%;
 }
 
+.edit-form-container img{
+    width: auto;
+}
+
 .edit-form-container input{
     border: none;
     outline:none;
