--- a/src/views/Cart/Cart.css
+++ b/src/views/Cart/Cart.css
@@ -94,6 +94,10 @@ align-items: center;
   width: auto;
 }
 
+.list-cart-products{
+  width: auto;
+}
+
 .description {
   width: 100%;
   font-size: 40px;
